--- a/googlebook/package.json
+++ b/googlebook/package.json
@@ -5,7 +5,9 @@
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.6.6"
+    "mongoose": "^5.6.6",
+    "concurrently": "^4.1.1",
+    "nodemon": "^1.19.1"
   },
   "main": "server.js",
   "scripts": {
