--- a/googlebook/package.json
+++ b/googlebook/package.json
@@ -27,5 +27,9 @@
   "devDependencies": {
     "concurrently": "^4.1.1",
     "nodemon": "^1.19.1"
+  },
+  "engines": {
+    "node": "11.10.0",
+    "npm": "6.10.0" 
   }
 }
